part of issue #1: adjusting spacing and removing wufoo styling

--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,21 @@ html, body {
   background-color: #000;
 }
 
+form.wufoo {
+  position: absolute;
+  bottom: 10px;
+}
+
 input {
   color: #000;
+}
+
+#foli1 {
+  display: inline;
+}
+
+#submit-button {
+  display: inline;
 }
 
 /*#header h2 {
@@ -25,7 +38,7 @@ input {
 }
 #logo-overlay {
   position: fixed;
-  top: calc((100% - 145px)/2);
+  top: calc((60% - 145px)/2);
   left: calc((100% - 306px)/2);
 }
 /*overlay end*/
@@ -43,7 +56,7 @@ input {
   position:absolute;
   font-family: 'Montserrat';
   font-size: 24px;
-  top: 80%;
+  top: 60%;
   left: calc((100% - 157px)/2)
 }
 
@@ -60,15 +73,9 @@ input {
   font-size: 20px;
 }
 
-#logo-overlay {
-  position: fixed;
-  top: calc((100% - 145px)/2);
-  left: calc((100% - 275px)/2);
-}
-
 #logo-main {
   position: absolute;
-  top: calc((100% - 145px)/2);
+  top: calc((60% - 145px)/2);
   left: calc((100% - 306px)/2);
   z-index: 2;
 }
